# Bachelor

./: .gitignore  ReadMe.md  annotions.json  calibration.json  comile_open3d.ps1  config.json  config.py  data_extraction.py  main.py  my_dataset.py  odometry.py  reader.py  recon_system.py  requirements.txt  requirments.txt  setup.py  slam.py  tensor.npy  tes.py  test.py  todo (copy).txt  todo.txt
Arbeit/: BechlorArbeit.tex  Bericht.bbl-SAVE-ERROR  literatur.bib  thesis_uro.sty
capturing/: ZED2.py
image_segmentation/: LabelwithSam.py  cross_validation.py  data_extraction.py  evaluation.py  label_studio.py  main.py  my_dataset.py  options.py  point_picker.py  predict.py  run_optimization.py  sam.py  test.py  test_model.py  train.py
labeling/: sam.py
odometry/: Readme.md  TestMethods.py  compile.py  present_test.ipynb  run_test.py  salm_vis.py  slam_visualizer.py
odometry/cpp/: CMakeLists.txt  CONFIG.h  MiselaniousMain.cpp  OdometryTest.cpp  SlamTest.cpp  SpeedTest.cpp  TestDataset.cpp  TestDataset.h  plot.py  pose_graph.h  quick_test.cpp
odometry/cpp/configs/: odometry_config.json  slam_config.json
odometry/cpp/util/: align_TUMDastaset.py
pipeline/: calculate_volume.py  compile_gtsam.sh  icp.py  multitherad_icp.py  reader.py  (+7 more)
pipeline/cpp/: CMakeLists.txt  Integration.cpp  Integration.h  SemanticVBG.cpp  SemanticVBG.h  SemanticVGB.cpp  SemanticVGB.h  compile.ps1  compile.sh  debug_util.cpp  main.cpp  odometry.cpp  pose_graph.h  test.cpp
pipeline/cpp/Open3D_modified/: CMakeLists.txt  compile.ps1  compile.sh  compile_open3d_from_source.sh  recompile.ps1  recompile.sh
pipeline/cpp/Open3D_modified/cpp/open3d/t/geometry/: Geometry.h  RGBDMImage.cpp  RGBDMImage.h  VoxelBlockGrid.cpp  VoxelBlockGrid.h
pipeline/cpp/Open3D_modified/cpp/open3d/t/geometry/kernel/: VoxelBlockGrid.cpp  VoxelBlockGrid.h  VoxelBlockGridCPU.cpp  VoxelBlockGridCUDA.cu  VoxelBlockGridImpl.h
pipeline/cpp/Open3D_modified/cpp/open3d/t/pipelines/: CMakeLists.txt
pipeline/cpp/Open3D_modified/cpp/open3d/t/pipelines/kernel/: RGBDMOdometry.cpp  RGBDMOdometry.h  RGBDMOdometryCPU.cpp  RGBDMOdometryCUDA.cu  RGBDMOdometryImpl.h  RGBDOdometry.cpp  RGBDOdometry.h  RGBDOdometryCPU.cpp  RGBDOdometryCUDA.cu  RGBDOdometryImpl.h  RGBDOdometryJacobianImpl.h
pipeline/cpp/Open3D_modified/cpp/open3d/t/pipelines/odometry/: RGBDMOdometry.cpp  RGBDMOdometry.h  RGBDOdometry.cpp  RGBDOdometry.h  debug_util.h
pipeline/cpp/Open3D_modified/cpp/pybind/t/geometry/: voxel_block_grid.cpp
pipeline/cpp/compile_scrpts/: compile.ps1
pipeline/cpp/custom_kernel/: custom_inetgrationCUDA.cu  custom_integration.cpp  custom_integration.h  custom_integrationCPU.cpp  custom_integrationCUDA.cu  custom_integrationImpl.h  custom_integration_impl.h
pipeline/cpp/test/: CMakeLists.txt  CONFIG.h  OdometryTest.cpp  SlamTest.cpp  TestDataset.h  TestUtil.cpp  test.cpp  test.h  test_dataset.cpp  test_dataset.h  test_util.cpp  test_util.h
pipeline/cpp/test/configs/: odometry_config.json  slam_config.json
(+32 files in other folders)
